--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: samuelreichertt@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Desenvolvedor Web
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "samuelreichert.github.io" # the base hostname & protocol for your site
+url: "http://samuelreichert.github.io" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
