--- a/.editorconfig
+++ b/.editorconfig
@@ -1,16 +1,11 @@
 # EditorConfig is awesome: http://EditorConfig.org
 
-# top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
-indent_style = space
-indent_size = 2
+charset = utf-8
 end_of_line = lf
-insert_final_newline = true
-
-# Matches the exact files either package.json or .travis.yml
-[{package.json,.travis.yml}]
-indent_style = space
 indent_size = 2
+indent_style = space
+insert_final_newline = true
+trim_trailing_whitespace = true
