--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,46 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
 # Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
 title: Samuel Reichert
+name: Samuel Reichert
 email: samuelreichertt@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Desenvolvedor Web
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://samuelreichert.github.io" # the base hostname & protocol for your site
+description: >- # this means to ignore newlines until "baseurl:"
+  I have 5 years of experience focused on web development, working mostly with
+  React in front end, and Ruby (Ruby on Rails) and Node.js in back end,
+  always seeking to improve my knowledge to deliver better solutions.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+facebook_username: samuelreichert
+github_username: samuelreichert
+instagram_username: samuelreichert
+linkedin_username: samuelreichert
+twitter_username: samuel_reichert
 
 # Build settings
 markdown: kramdown
+plugins:
+  - jekyll-feed
+
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
